[tool.poetry]
name = "treasury-orchestrator"
version = "0.1.0"
description = "Treasury Orchestrator for Bankers Bank"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "treasury_orchestrator"},
    {include = "bank_connector"},
]

[tool.poetry.dependencies]
requests = "^2.32"
httpx = "^0.27"
python = "^3.8"
pydantic = "^2.0"
fastapi = "^0.110"
sqlmodel = "^0.0.16"
# pydantic-xsd = "^0.3.2"  # Temporarily removed to resolve dependency issues
uvicorn = "^0.29"
jsonschema = "^4.22"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
requests-mock = "^1.11"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"

[tool.poetry.scripts]
treasury-cli = "treasury_orchestrator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
