[tool.poetry]
name = "treasury-orchestrator"
version = "0.1.0"
description = "Treasury Orchestrator for Bankers Bank"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [
    {include = "treasury_orchestrator"},
    {include = "bank_connector"},
    {include = "quantengine"},
]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0"
fastapi = "^0.110"
httpx = "^0.27"
sqlmodel = "^0.0.16"
pydantic-xsd = "^0.3.2"
uvicorn = "^0.29"
redis = "^5.0"
kafka-python = "^2.0"
prometheus-client = "^0.20"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
requests-mock = "^1.11"
black = "^23.0"
isort = "^5.0"
mypy = "^1.0"
fakeredis = "^2.20"

[tool.poetry.scripts]
treasury-cli = "treasury_orchestrator.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
