[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bankersbank"
version = "0.1.0"
description = "SDK for Bankers Bank API integration"
authors = [
    {name = "John Riley", email = "jriley@lucidtrades.com"}
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.0.0"
]
